--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,13 @@
     <link rel="Stylesheet" href="css/normalize.css" />
     <link rel="Stylesheet" href="css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/controller.js"></script>
     <script type="text/javascript" src="js/table.js"></script>
+    <script type="text/javascript" src="js/column.js"></script>
+    <script type="text/javascript" src="js/table-view-model.js"></script>
+    
+    <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/table-controller.js"></script>
   </head>
   <body>
     {{ content }}
