--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/table.js"></script>
     <script type="text/javascript" src="js/column.js"></script>
+    <script type="text/javascript" src="js/draggable.js"></script>
+    <script type="text/javascript" src="js/acceleration-helper.js"></script>
+    <script type="text/javascript" src="js/animation-helper.js"></script>
     <script type="text/javascript" src="js/table-view-model.js"></script>
     
     <script type="text/javascript" src="js/controller.js"></script>
