--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 .table ol {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 5px 0px;
 }
 .table li {
   display: flex;
@@ -65,7 +65,20 @@
   text-align: center;
 }
 .table li .name {
-  margin-right: auto;
+  padding: 0px 6px;
+  border: 2px solid transparent;
+  font-family: serif;
+  background: none;
+  width: 100px;
+  transition: background-color .25s, border-color .25s;
+}
+.table li .name:hover {
+  background-color: rgba(0,0,0,.05);
+}
+.table li .name:focus {
+  background-color: rgba(0,0,0,.1);
+  border-color: rgba(100, 150, 255, .6);
+  outline: none;
 }
 .table li .edit::after {
   content: 'edit';
