--- a/css/style.css
+++ b/css/style.css
@@ -64,22 +64,35 @@
   width: 20px;
   text-align: center;
 }
-.table li .name {
+.table li .dataType {
+  -webkit-appearance: none;
+  border-radius: 0;
+  font-style: italic;
+}
+.table li .name,
+.table li .dataType {
   padding: 0px 6px;
   border: 2px solid transparent;
   font-family: serif;
   background: none;
-  width: 100px;
   transition: background-color .25s, border-color .25s;
+  margin: -1px;
 }
-.table li .name:hover {
-  background-color: rgba(0,0,0,.05);
+.table li .name {
+  width: 100px;
 }
-.table li .name:focus {
-  background-color: rgba(0,0,0,.1);
+.table li .name:hover,
+.table li .dataType:hover {
+  background-color: rgba(0,0,0, .05);
+  border-color: rgba(100, 150, 255, .1);
+}
+.table li .name:focus,
+.table li .dataType:focus {
+  background-color: rgba(0,0,0, .1);
   border-color: rgba(100, 150, 255, .6);
   outline: none;
 }
+
 .table li .edit::after {
   content: 'edit';
 }
