toggle key on click and establish ids on everythign

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,13 @@
     <link rel="Stylesheet" href="css/normalize.css" />
     <link rel="Stylesheet" href="css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/randy.js"></script>
     <script type="text/javascript" src="js/table.js"></script>
     <script type="text/javascript" src="js/column.js"></script>
     <script type="text/javascript" src="js/draggable.js"></script>
     <script type="text/javascript" src="js/acceleration-helper.js"></script>
     <script type="text/javascript" src="js/animation-helper.js"></script>
+    <script type="text/javascript" src="js/column-view-model.js"></script>
     <script type="text/javascript" src="js/table-view-model.js"></script>
     
     <script type="text/javascript" src="js/controller.js"></script>
