massive refactor with factory pattern

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,9 @@
     <title>draggy</title>
     <link rel="Stylesheet" href="css/normalize.css" />
     <link rel="Stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.7/raphael.min.js" integrity="sha256-67By+NpOtm9ka1R6xpUefeGOY8kWWHHRAKlvaTJ7ONI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/randy.js"></script>
-    <script type="text/javascript" src="js/binding.js"></script>
-    <script type="text/javascript" src="js/table.js"></script>
-    <script type="text/javascript" src="js/column.js"></script>
-    <script type="text/javascript" src="js/draggable.js"></script>
-    <script type="text/javascript" src="js/acceleration-helper.js"></script>
-    <script type="text/javascript" src="js/animation-helper.js"></script>
-    <script type="text/javascript" src="js/column-view-model.js"></script>
-    <script type="text/javascript" src="js/table-view-model.js"></script>
-    
-    <script type="text/javascript" src="js/controller.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/table-controller.js"></script>
+    {% js app %}
   </head>
   <body>
     {{ content }}
