--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,17 @@
-.wrapper, .svg {
-  width: 500px;
-  height: 500px;
+html, body {
+  width: 100%;
+  height: 100%;
 }
+
+.wrapper, #svgWrapper {
+  width: 100%;
+  height: 100%;
+}
+
 .wrapper {
   position: relative;
   background: pink;
 }
-.svg {
-  position: absolute;
-  background: transparent;
-  top: 0;
-  left: 0;
-}
-.gee path {
-  stroke-width: 5;
-  stroke: #000;
-  stroke-linecap: round;
-  fill: none;
-}
-
 
 
 
